--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,16 @@ addons:
 
 matrix:
   include:
-  - env: GHCVER=7.10.1 STACK_YAML=stack-7.10.yaml
-  - env: GHCVER=head   STACK_YAML=stack-7.11.yaml
+  - env: GHCVER=7.10.2 STACK_YAML=stack-7.10.yaml
+  # - env: GHCVER=head   STACK_YAML=stack-7.11.yaml
     addons:
       apt:
         sources:
         - hvr-ghc
         packages:
         - ghc-head
-  allow_failures:
-    - env: GHCVER=head STACK_YAML=stack-7.11.yaml
+  # allow_failures:
+  #   - env: GHCVER=head STACK_YAML=stack-7.11.yaml
 
 before_install:
   # ghc
