checkpoint - different tack

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -59,7 +59,7 @@ library
 
 
   -- other-modules:
-  -- other-extensions:
+  default-extensions: TemplateHaskell
   GHC-Options:         -Wall
   build-depends:       base >=4.7 && <4.9
                      , containers >= 0.5
