--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -72,6 +72,7 @@ library
                      , mtl       >= 2.2.1
                      , syb       >= 0.5
                      , free      >= 4.12
+                     , ghc-boot
   hs-source-dirs:      src
   default-language:    Haskell2010
   if impl (ghc < 7.10.2)
