--- a/stack-7.11.yaml
+++ b/stack-7.11.yaml
@@ -6,9 +6,10 @@ packages:
 #     commit: 07fa5ff2ae554dcaf9ad93c04e195259be5dddd0
 #   extra-dep: true
 extra-deps:
-- semigroupoids-5.0.0.2
-- bifunctors-5
-- profunctors-5.1.1
-- free-4.12.1
-- cabal-helper-0.3.6.0
-resolver: nightly-2015-08-06
+# - semigroupoids-5.0.0.2
+# - bifunctors-5
+# - profunctors-5.1.1
+# - free-4.12.1
+# - cabal-helper-0.3.6.0
+resolver: nightly-2015-12-19
+allow-newer: true
