Can set up a mirror of hackage, with tabs
Still need to clean up whitespace

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@
 /test.pdf
 /test.ps
 /ghc.hp
+/cpp.txt
+/pfail.txt
+/processed.txt
+/tests/hackage/cpp.txt
+/tests/hackage/pfail.txt
+/tests/hackage/processed.txt
