--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -122,6 +122,8 @@ executable roundtrip
                , ghc-paths
                , syb
                , temporary
+    if impl (ghc >= 7.11)
+        build-depends: ghc-boot
     buildable: True
   else
     buildable: False
