--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@
 /tests/hackage/cpp.txt
 /tests/hackage/pfail.txt
 /tests/hackage/processed.txt
+/failures
+/origfailures.txt
+/tests/cpp.txt
+/tests/hackage-roundtrip-work
+/tests/pfail.txt
+/tests/processed.txt
