Making roundtrip more robust.
Add logging to see where it crashes, and flush on append when writing to
a state file.

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -151,6 +151,7 @@ executable prepare-hackage
   default-language:    Haskell2010
   if flag (roundtrip)
     build-depends: base
+                 , containers
                  , directory
                  , filemanip
                  , filepath
@@ -163,3 +164,4 @@ executable prepare-hackage
         build-depends: ghc-boot
   else
     buildable: False
+  GHC-Options:         -threaded
