Work through SourceText for integers for T11430

--- a/stack-7.10.yaml
+++ b/stack-7.10.yaml
@@ -5,5 +5,5 @@ packages:
 #     git: git@github.com:mpickering/refact
 #     commit: 07fa5ff2ae554dcaf9ad93c04e195259be5dddd0
 #   extra-dep: true
-extra-deps:
+extra-deps: []
 resolver: lts-3.18
