Trying to get ghc-head tests running on travis

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -147,6 +147,8 @@ executable static
         build-depends: ghc-boot
   else
     buildable: False
+  ghc-options:
+    -threaded
 
 executable prepare-hackage
   main-is: PrepareHackage.hs
