--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,7 @@ script:
  - if [ -f configure.ac ]; then autoreconf -i; fi
  - cabal configure --enable-tests --enable-benchmarks $CABALEXTRA -v2  # -v2 provides useful information for debugging
  - cabal build   # this builds all libraries and executables (including tests/benchmarks)
- - cabal test
+ - cabal test $CABALEXTRA
  - cabal check
  - cabal sdist   # tests that a source-distribution can be generated
 
