--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ matrix:
 
 before_install:
  - export CABALEXTRA=--allow-newer
+ - echo $CABALEXTRA
  - unset CC
  - export PATH=~/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
  - echo $PATH
@@ -77,7 +78,7 @@ script:
  - if [ -f configure.ac ]; then autoreconf -i; fi
  - cabal configure --enable-tests --enable-benchmarks $CABALEXTRA -v2  # -v2 provides useful information for debugging
  - cabal build   # this builds all libraries and executables (including tests/benchmarks)
- - cabal test $CABALEXTRA
+ - cabal test
  - cabal check
  - cabal sdist   # tests that a source-distribution can be generated
 
