--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -69,7 +69,7 @@ library
                      , Language.Haskell.GHC.ExactPrint.Types
                      , Language.Haskell.GHC.ExactPrint.Utils
 
-  if impl (ghc < 8.0.2)
+  if impl (ghc <= 8.0.2)
       exposed-modules: Language.Haskell.GHC.ExactPrint.GhcInterim
 
   -- other-modules:
