Manage travis output timeout

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,11 +85,11 @@ install:
 script:
  - if [ -f configure.ac ]; then autoreconf -i; fi
  - cabal configure --enable-tests --enable-benchmarks $CABALEXTRA -v2  # -v2 provides useful information for debugging
- - cabal build   # this builds all libraries and executables (including tests/benchmarks)
- - cabal test
- - cabal haddock
- - cabal check
- - cabal sdist   # tests that a source-distribution can be generated
+ - travis_long cabal build   # this builds all libraries and executables (including tests/benchmarks)
+ - travis_long cabal test
+ - travis_long cabal haddock
+ - travis_long cabal check
+ - travis_long cabal sdist   # tests that a source-distribution can be generated
 
 # Check that the resulting source distribution can be built & installed.
 # If there are no other `.tar.gz` files in `dist`, this can be even simpler:
