--- a/.travis.yml
+++ b/.travis.yml
@@ -85,7 +85,7 @@ install:
 script:
  - if [ -f configure.ac ]; then autoreconf -i; fi
  - cabal configure --enable-tests --enable-benchmarks $CABALEXTRA -v2  # -v2 provides useful information for debugging
- - travis_long cabal build   # this builds all libraries and executables (including tests/benchmarks)
+ - ./travis_long cabal build   # this builds all libraries and executables (including tests/benchmarks)
  - ./travis_long cabal test
  - ./travis_long cabal haddock
  - ./travis_long cabal check
