--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -92,13 +92,16 @@ library
       build-depends: ghc-boot
   hs-source-dirs:      src
 
-  if impl (ghc > 8.0.3)
-      hs-source-dirs: src-ghc82
+  if impl (ghc > 8.2.9)
+      hs-source-dirs: src-ghc84
   else
-    if impl (ghc > 7.10.3)
-        hs-source-dirs: src-ghc80
+    if impl (ghc > 8.0.3)
+        hs-source-dirs: src-ghc82
     else
-        hs-source-dirs: src-ghc710
+      if impl (ghc > 7.10.3)
+          hs-source-dirs: src-ghc80
+      else
+          hs-source-dirs: src-ghc710
 
   default-language:    Haskell2010
   if impl (ghc < 7.10.2)
@@ -112,13 +115,16 @@ Test-Suite test
   else
     hs-source-dirs:      tests
 
-  if impl (ghc > 8.0.3)
-      hs-source-dirs: src-ghc82
+  if impl (ghc > 8.2.9)
+        hs-source-dirs: src-ghc84
   else
-    if impl (ghc > 7.10.3)
-        hs-source-dirs: src-ghc80
+    if impl (ghc > 8.0.3)
+        hs-source-dirs: src-ghc82
     else
-        hs-source-dirs: src-ghc710
+      if impl (ghc > 7.10.3)
+          hs-source-dirs: src-ghc80
+      else
+          hs-source-dirs: src-ghc710
 
   main-is:             Test.hs
   other-modules:       Test.Common
