--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -36,6 +36,7 @@ extra-source-files:  ChangeLog
                      tests/examples/ghc710/*.hs
                      tests/examples/ghc710-only/*.hs
                      tests/examples/ghc80/*.hs
+                     tests/examples/ghc82/*.hs
                      tests/examples/transform/*.hs
                      tests/examples/failing/*.hs.bad
                      tests/examples/transform/*.hs.expected
