--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -1,5 +1,5 @@
 name:                ghc-exactprint
-version:             0.5.5.0
+version:             0.5.6.0
 synopsis:            ExactPrint for GHC
 description:         Using the API Annotations available from GHC 7.10.2, this
                      library provides a means to round trip any code that can
@@ -29,7 +29,7 @@ author:              Alan Zimmerman, Matthew Pickering
 maintainer:          alan.zimm@gmail.com
 category:            Development
 build-type:          Simple
-tested-with:    GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2, GHC == 8.2.1
+tested-with:    GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2, GHC == 8.2.2
 extra-source-files:  ChangeLog
                      src-ghc710/Language/Haskell/GHC/ExactPrint/*.hs
                      tests/examples/failing/*.hs
@@ -78,7 +78,7 @@ library
   -- other-modules:
   -- other-extensions:
   GHC-Options:         -Wall
-  build-depends:       base >=4.7 && <4.11
+  build-depends:       base >=4.7 && <4.12
                      , bytestring >= 0.10.6
                      , containers >= 0.5
                      , directory >= 1.2
@@ -92,13 +92,16 @@ library
       build-depends: ghc-boot
   hs-source-dirs:      src
 
-  if impl (ghc > 8.0.3)
-      hs-source-dirs: src-ghc82
+  if impl (ghc > 8.2.2)
+      hs-source-dirs: src-ghc84
   else
-    if impl (ghc > 7.10.3)
-        hs-source-dirs: src-ghc80
+    if impl (ghc > 8.0.3)
+        hs-source-dirs: src-ghc82
     else
-        hs-source-dirs: src-ghc710
+      if impl (ghc > 7.10.3)
+          hs-source-dirs: src-ghc80
+      else
+          hs-source-dirs: src-ghc710
 
   default-language:    Haskell2010
   if impl (ghc < 7.10.2)
@@ -112,13 +115,16 @@ Test-Suite test
   else
     hs-source-dirs:      tests
 
-  if impl (ghc > 8.0.3)
-      hs-source-dirs: src-ghc82
+  if impl (ghc > 8.2.2)
+      hs-source-dirs: src-ghc84
   else
-    if impl (ghc > 7.10.3)
-        hs-source-dirs: src-ghc80
+    if impl (ghc > 8.0.3)
+        hs-source-dirs: src-ghc82
     else
-        hs-source-dirs: src-ghc710
+      if impl (ghc > 7.10.3)
+          hs-source-dirs: src-ghc80
+      else
+          hs-source-dirs: src-ghc710
 
   main-is:             Test.hs
   other-modules:       Test.Common
