--- a/cabal.project
+++ b/cabal.project
@@ -1,5 +1,6 @@
 packages: .
           ../../ekmett/free
+          ../Haskell-Turtle-Library
 repository head.hackage
   url: http://head.hackage.haskell.org/
   secure: True
