Update for GHC 8.4 alpha 2

--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,6 @@
 packages: .
           ../../ekmett/free
-          ../Haskell-Turtle-Library
+          -- ../Haskell-Turtle-Library
 repository head.hackage
   url: http://head.hackage.haskell.org/
   secure: True
