Confirm operation with GHC 8.4.1 alpha 3

--- a/cabal.project
+++ b/cabal.project
@@ -1,5 +1,5 @@
 packages: .
-          ../../ekmett/free
+          -- ../../ekmett/free
           -- ../Haskell-Turtle-Library
 repository head.hackage
   url: http://head.hackage.haskell.org/
