--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ cabal.sandbox.config
 /cabal.project.local
 /bin
 dist-newstyle
+/cabal.project.local~
+/.ghc.environment.x86_64-linux-8.5.20180614
+/stack.yaml
