--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -80,7 +80,7 @@ library
   -- other-modules:
   -- other-extensions:
   GHC-Options:         -Wall
-  build-depends:       base >=4.7 && <4.12
+  build-depends:       base >=4.7 && <4.13
                      , bytestring >= 0.10.6
                      , containers >= 0.5
                      , directory >= 1.2
@@ -94,16 +94,19 @@ library
       build-depends: ghc-boot
   hs-source-dirs:      src
 
-  if impl (ghc > 8.2.2)
-      hs-source-dirs: src-ghc84
+  if impl (ghc > 8.4.3)
+      hs-source-dirs: src-ghc86
   else
-    if impl (ghc > 8.0.3)
-        hs-source-dirs: src-ghc82
+    if impl (ghc > 8.2.2)
+        hs-source-dirs: src-ghc84
     else
-      if impl (ghc > 7.10.3)
-          hs-source-dirs: src-ghc80
+      if impl (ghc > 8.0.3)
+          hs-source-dirs: src-ghc82
       else
-          hs-source-dirs: src-ghc710
+        if impl (ghc > 7.10.3)
+            hs-source-dirs: src-ghc80
+        else
+            hs-source-dirs: src-ghc710
 
   default-language:    Haskell2010
   if impl (ghc < 7.10.2)
@@ -117,16 +120,19 @@ Test-Suite test
   else
     hs-source-dirs:      tests
 
-  if impl (ghc > 8.2.2)
-      hs-source-dirs: src-ghc84
+  if impl (ghc > 8.4.3)
+      hs-source-dirs: src-ghc86
   else
-    if impl (ghc > 8.0.3)
-        hs-source-dirs: src-ghc82
+    if impl (ghc > 8.2.2)
+        hs-source-dirs: src-ghc84
     else
-      if impl (ghc > 7.10.3)
-          hs-source-dirs: src-ghc80
+      if impl (ghc > 8.0.3)
+          hs-source-dirs: src-ghc82
       else
-          hs-source-dirs: src-ghc710
+        if impl (ghc > 7.10.3)
+            hs-source-dirs: src-ghc80
+        else
+            hs-source-dirs: src-ghc710
 
   main-is:             Test.hs
   other-modules:       Test.Common
@@ -138,7 +144,7 @@ Test-Suite test
   if impl (ghc < 7.10.2)
       buildable: False
   Build-depends:       HUnit >= 1.2
-                     , base < 4.12
+                     , base < 4.13
                      , bytestring
                      , containers >= 0.5
                      , Diff
