--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,7 @@
 packages: .
           -- ../../ekmett/free
           -- ../Haskell-Turtle-Library
+          ../../hvr/packages/hashable-1.2.7.0
 repository head.hackage
   url: http://head.hackage.haskell.org/
   secure: True
@@ -8,3 +9,12 @@ repository head.hackage
              2e8555dde16ebd8df076f1a8ef13b8f14c66bad8eafefd7d9e37d0ed711821fb
              8f79fd2389ab2967354407ec852cbe73f2e8635793ac446d09461ffb99527f6e
   key-threshold: 3
+
+-- https://github.com/hvr/head.hackage#as-locally-patched-packages
+optional-packages: packages/*/*.cabal
+-- $ cd packages
+-- $ cabal unpack --pristine $PKGID
+-- $ cd $PKGID/
+-- $ patch -p1 -i ${WhereThisGitHubRepoIsCloned}/patches/$PKGID.patch
+-- $ cp ${WhereThisGitHubRepoIsCloned}/patches/$PKGID.cabal ./*.cabal
+-- $ cd ../..
