--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -160,7 +160,7 @@ Test-Suite test
   if flag (dev)
       build-depends: free
   else
-      build-depends: ghc-exactprint >= 0.5.4
+      build-depends: ghc-exactprint
 
   if impl (ghc >= 7.11)
       build-depends: ghc-boot
