Update for GHC 8.6 beta1
Note: the prepare-hackage exe now requires cabal 2.4 to build

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -172,6 +172,8 @@ executable roundtrip
   main-is: Roundtrip.hs
   hs-source-dirs: tests
   other-modules: Test.Common
+                 Test.CommonUtils
+                 Test.Consistency
   default-language:    Haskell2010
   if impl (ghc >= 7.10.2) && flag (roundtrip)
     build-depends:
