--- a/cabal.project
+++ b/cabal.project
@@ -1,14 +1,12 @@
 packages: .
-          -- ../../ekmett/free
-          -- ../Haskell-Turtle-Library
-          -- ../../hvr/packages/hashable-1.2.7.0
-repository head.hackage
-  url: http://head.hackage.haskell.org/
-  secure: True
-  root-keys: 07c59cb65787dedfaef5bd5f987ceb5f7e5ebf88b904bbd4c5cbdeb2ff71b740
-             2e8555dde16ebd8df076f1a8ef13b8f14c66bad8eafefd7d9e37d0ed711821fb
-             8f79fd2389ab2967354407ec852cbe73f2e8635793ac446d09461ffb99527f6e
-  key-threshold: 3
+
+-- repository head.hackage
+--   url: http://head.hackage.haskell.org/
+--   secure: True
+--   root-keys: 07c59cb65787dedfaef5bd5f987ceb5f7e5ebf88b904bbd4c5cbdeb2ff71b740
+--              2e8555dde16ebd8df076f1a8ef13b8f14c66bad8eafefd7d9e37d0ed711821fb
+--              8f79fd2389ab2967354407ec852cbe73f2e8635793ac446d09461ffb99527f6e
+--   key-threshold: 3
 
 -- https://github.com/hvr/head.hackage#as-locally-patched-packages
 -- optional-packages: packages/*/*.cabal
@@ -18,3 +16,6 @@ repository head.hackage
 -- $ patch -p1 -i ${WhereThisGitHubRepoIsCloned}/patches/$PKGID.patch
 -- $ cp ${WhereThisGitHubRepoIsCloned}/patches/$PKGID.cabal ./*.cabal
 -- $ cd ../..
+
+allow-newer:foldl-1.4.4:containers
+allow-newer:turtle-1.5.11:containers
