--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -104,19 +104,22 @@ library
       build-depends: ghc-boot
   hs-source-dirs:      src
 
-  if impl (ghc > 8.4.4)
-      hs-source-dirs: src-ghc86
+  if impl (ghc > 8.6.4)
+      hs-source-dirs: src-ghc88
   else
-    if impl (ghc > 8.2.2)
-        hs-source-dirs: src-ghc84
+    if impl (ghc > 8.4.4)
+        hs-source-dirs: src-ghc86
     else
-      if impl (ghc > 8.0.3)
-          hs-source-dirs: src-ghc82
+      if impl (ghc > 8.2.2)
+          hs-source-dirs: src-ghc84
       else
-        if impl (ghc > 7.10.3)
-            hs-source-dirs: src-ghc80
+        if impl (ghc > 8.0.3)
+            hs-source-dirs: src-ghc82
         else
-            hs-source-dirs: src-ghc710
+          if impl (ghc > 7.10.3)
+              hs-source-dirs: src-ghc80
+          else
+              hs-source-dirs: src-ghc710
 
   default-language:    Haskell2010
   if impl (ghc < 7.10.2)
