--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -46,6 +46,7 @@ extra-source-files:  ChangeLog
                      tests/examples/ghc82/*.hs
                      tests/examples/ghc84/*.hs
                      tests/examples/ghc86/*.hs
+                     tests/examples/ghc88/*.hs
                      tests/examples/pre-ghc86/*.hs
                      tests/examples/vect/*.hs
                      tests/examples/transform/*.hs
@@ -133,19 +134,22 @@ Test-Suite test
   else
     hs-source-dirs:      tests
 
-  if impl (ghc > 8.4.4)
-      hs-source-dirs: src-ghc86
+  if impl (ghc > 8.6.4)
+      hs-source-dirs: src-ghc88
   else
-    if impl (ghc > 8.2.2)
-        hs-source-dirs: src-ghc84
+    if impl (ghc > 8.4.4)
+        hs-source-dirs: src-ghc86
     else
-      if impl (ghc > 8.0.3)
-          hs-source-dirs: src-ghc82
+      if impl (ghc > 8.2.2)
+          hs-source-dirs: src-ghc84
       else
-        if impl (ghc > 7.10.3)
-            hs-source-dirs: src-ghc80
+        if impl (ghc > 8.0.3)
+            hs-source-dirs: src-ghc82
         else
-            hs-source-dirs: src-ghc710
+          if impl (ghc > 7.10.3)
+              hs-source-dirs: src-ghc80
+          else
+              hs-source-dirs: src-ghc710
 
   main-is:             Test.hs
   other-modules:       Test.Common
