Bringing in some of the GHC 8.8 new tests from GHC

--- a/cabal.project
+++ b/cabal.project
@@ -10,7 +10,7 @@ repository head.hackage
 
 -- https://github.com/hvr/head.hackage#as-locally-patched-packages
 
--- optional-packages: packages/*/*.cabal
+optional-packages: packages/*/*.cabal
 
 -- $ cd packages
 -- $ cabal unpack --pristine $PKGID
