--- a/stack-8.4.4.yaml
+++ b/stack-8.4.4.yaml
@@ -1,5 +1,4 @@
-resolver: lts-12.14 # GHC 8.4.3
-compiler-check: newer-minor # allow GHC 8.4.4
+resolver: lts-12.26 # LTS 12.15 is first to support GHC 8.4.4
 packages:
 - '.'
 # extra-deps:
