--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -39,6 +39,7 @@ tested-with:         GHC == 7.10.3
                    , GHC == 8.6.1
                    , GHC == 8.6.2
                    , GHC == 8.6.4
+                   , GHC == 8.6.5
 extra-source-files:  ChangeLog
                      src-ghc710/Language/Haskell/GHC/ExactPrint/*.hs
                      tests/examples/failing/*.hs
@@ -112,7 +113,7 @@ library
       build-depends: ghc-boot
   hs-source-dirs:      src
 
-  if impl (ghc > 8.6.4)
+  if impl (ghc > 8.6.5)
       hs-source-dirs: src-ghc88
   else
     if impl (ghc > 8.4.4)
