--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -94,6 +94,7 @@ library
   -- other-modules:
   -- other-extensions:
   GHC-Options:         -Wall
+  -- GHC-Options:         -Weverything
   build-depends:       base >=4.8 && <4.14
                      , bytestring >= 0.10.6
                      , containers >= 0.5
@@ -113,22 +114,25 @@ library
       build-depends: ghc-boot
   hs-source-dirs:      src
 
-  if impl (ghc > 8.6.5)
-      hs-source-dirs: src-ghc88
+  if impl (ghc > 8.8.1)
+      hs-source-dirs: src-ghc810
   else
-    if impl (ghc > 8.4.4)
-        hs-source-dirs: src-ghc86
+    if impl (ghc > 8.6.5)
+        hs-source-dirs: src-ghc88
     else
-      if impl (ghc > 8.2.2)
-          hs-source-dirs: src-ghc84
+      if impl (ghc > 8.4.4)
+          hs-source-dirs: src-ghc86
       else
-        if impl (ghc > 8.0.3)
-            hs-source-dirs: src-ghc82
+        if impl (ghc > 8.2.2)
+            hs-source-dirs: src-ghc84
         else
-          if impl (ghc > 7.10.3)
-              hs-source-dirs: src-ghc80
+          if impl (ghc > 8.0.3)
+              hs-source-dirs: src-ghc82
           else
-              hs-source-dirs: src-ghc710
+            if impl (ghc > 7.10.3)
+                hs-source-dirs: src-ghc80
+            else
+                hs-source-dirs: src-ghc710
 
   default-language:    Haskell2010
   if impl (ghc < 7.10.2)
@@ -142,22 +146,25 @@ Test-Suite test
   else
     hs-source-dirs:      tests
 
-  if impl (ghc > 8.6.5)
-      hs-source-dirs: src-ghc88
+  if impl (ghc > 8.8.1)
+      hs-source-dirs: src-ghc810
   else
-    if impl (ghc > 8.4.4)
-        hs-source-dirs: src-ghc86
+    if impl (ghc > 8.6.5)
+        hs-source-dirs: src-ghc88
     else
-      if impl (ghc > 8.2.2)
-          hs-source-dirs: src-ghc84
+      if impl (ghc > 8.4.4)
+          hs-source-dirs: src-ghc86
       else
-        if impl (ghc > 8.0.3)
-            hs-source-dirs: src-ghc82
+        if impl (ghc > 8.2.2)
+            hs-source-dirs: src-ghc84
         else
-          if impl (ghc > 7.10.3)
-              hs-source-dirs: src-ghc80
+          if impl (ghc > 8.0.3)
+              hs-source-dirs: src-ghc82
           else
-              hs-source-dirs: src-ghc710
+            if impl (ghc > 7.10.3)
+                hs-source-dirs: src-ghc80
+            else
+                hs-source-dirs: src-ghc710
 
   main-is:             Test.hs
   other-modules:       Test.Common
