--- a/cabal.project
+++ b/cabal.project
@@ -9,17 +9,7 @@ repository head.hackage.ghc.haskell.org
        7541f32a4ccca4f97aea3b22f5e593ba2c0267546016b992dfadcd2fe944e55d
        26021a13b401500c8eb2761ca95c61f2d625bfef951b939a8124ed12ecf07329
 
--- repository head.hackage
---   url: http://head.hackage.haskell.org/
---   secure: True
---   root-keys: 07c59cb65787dedfaef5bd5f987ceb5f7e5ebf88b904bbd4c5cbdeb2ff71b740
---              2e8555dde16ebd8df076f1a8ef13b8f14c66bad8eafefd7d9e37d0ed711821fb
---              8f79fd2389ab2967354407ec852cbe73f2e8635793ac446d09461ffb99527f6e
---   key-threshold: 3
-
--- https://github.com/hvr/head.hackage#as-locally-patched-packages
-
--- optional-packages: packages/*/*.cabal
+optional-packages: packages/*/*.cabal
 
 -- $ cd packages
 -- $ cabal unpack --pristine $PKGID
