Tweak CPP for compiler versions, update travis for GHC 8.8.1

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -40,6 +40,7 @@ tested-with:         GHC == 7.10.3
                    , GHC == 8.6.2
                    , GHC == 8.6.4
                    , GHC == 8.6.5
+                   , GHC == 8.8.1
 extra-source-files:  ChangeLog
                      src-ghc710/Language/Haskell/GHC/ExactPrint/*.hs
                      tests/examples/failing/*.hs
