--- a/cabal.project
+++ b/cabal.project
@@ -9,7 +9,7 @@ repository head.hackage.ghc.haskell.org
        7541f32a4ccca4f97aea3b22f5e593ba2c0267546016b992dfadcd2fe944e55d
        26021a13b401500c8eb2761ca95c61f2d625bfef951b939a8124ed12ecf07329
 
-optional-packages: packages/*/*.cabal
+-- optional-packages: packages/*/*.cabal
 
 -- $ cd packages
 -- $ cabal unpack --pristine $PKGID
@@ -24,6 +24,12 @@ optional-packages: packages/*/*.cabal
 
 -- allow-newer:cabal-doctest-1.0.6:base
 -- allow-newer:hashable-1.2.7.0:base
+-- allow-newer:zlib-0.6.2.1:base
+-- allow-newer:vector-0.12.0.3:base
+-- allow-newer:vector-0.12.0.3:ghc-prim
+-- allow-newer:primitive-0.7.0.0:base
+-- allow-newer:primitive-0.7.0.0:ghc-prim
+-- allow-newer:async-2.2.2:base
 -- allow-newer:unix-2.7.2.2:base
 -- allow-newer:turtle-1.5.14:base
 -- allow-newer:turtle-1.5.14:time
